# crust

./: .gitignore  Cargo.toml  LICENSE  README.md
.crust_sessions/: sessions.json
apps/crust-react/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
apps/crust-react/src/: main.tsx  styles.css
apps/crust-react/src/api/: client.ts  sse.ts
apps/crust-react/src/components/: AppShell.tsx  ChatPanel.tsx  Composer.tsx  MessageItem.tsx  MessageList.tsx  SessionSidebar.tsx  ThinkingBlock.tsx  ToolCallCard.tsx
apps/crust-react/src/query/: QueryProvider.tsx
apps/crust-react/src/stores/: sessionStore.ts  uiStore.ts
apps/crust-react/src/types/: chat.ts
crates/crust-cli/: Cargo.toml
crates/crust-cli/src/: lib.rs  main.rs
crates/crust-core/: Cargo.toml
crates/crust-core/src/: agent.rs  approval.rs  commands.rs  context.rs  cores.rs  langgraph.rs  lib.rs  models_generated.rs  scoped_agent.rs  session.rs  settings.rs  skills.rs  spaces.rs  tools.rs  util.rs
crates/crust-gateway/: Cargo.toml
crates/crust-gateway/src/: main.rs
crates/crust-tui/: Cargo.toml
crates/crust-tui/src/: app.rs  lib.rs  main.rs  tui.rs
crates/crust-types/: Cargo.toml
crates/crust-types/src/: lib.rs
src/: context.rs  main.rs  models_generated.rs  session.rs
