[package]
name = "crust"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    ".",
    "crates/crust-core",
    "crates/crust-types",
]
resolver = "3"

[dependencies]
chrono = "0.4"
crust-core = { path = "crates/crust-core" }
crust-types = { path = "crates/crust-types" }
crossterm = "0.29.0"
dotenvy = "0.15.7"
futures-util = "0.3.32"
openrouter-rs = "0.9.0"
ratatui = "0.30.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tavily = "2.1.0"
tokio = { version = "1.52.1", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
