[package]
name = "crust"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    ".",
    "crates/crust-cli",
    "crates/crust-core",
    "crates/crust-tui",
    "crates/crust-types",
]
resolver = "3"

[dependencies]
crust-cli = { path = "crates/crust-cli" }
crust-tui = { path = "crates/crust-tui" }
crust-types = { path = "crates/crust-types" }
tokio = { version = "1.52.1", features = ["full"] }
