[package]
name = "crust-core"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
crust-types = { path = "../crust-types" }
futures-util = "0.3.32"
openrouter-rs = "0.9.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tavily = "2.1.0"
tokio = { version = "1.52.1", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
