[package]
name = "crust-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
crust-core = { path = "../crust-core" }
crust-types = { path = "../crust-types" }
futures-util = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["full"] }
