[package]
name = "crust-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
crust-core = { path = "../crust-core" }
crust-types = { path = "../crust-types" }
openrouter-rs = "0.9.0"
ratatui = "0.30.0"
tokio = { version = "1.52.1", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
